--- a/bloc-books/Gemfile
+++ b/bloc-books/Gemfile
@@ -1,4 +1,6 @@
 source 'https://rubygems.org'
 gem 'bloc_works', path: "../bloc_works"
+
+gem 'sqlite3'
 gem 'rack', "~> 1.6"
 gem "erubis", "~>2.7"
