--- a/bloc-books/Gemfile
+++ b/bloc-books/Gemfile
@@ -2,6 +2,7 @@ source 'https://rubygems.org'
 gem 'bloc_works', path: "../bloc_works"
 
 gem 'sqlite3'
+gem 'pry'
 gem 'rack', "~> 1.6"
 gem "erubis", "~>2.7"
 gem "rake", "~> 10.0"
